// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon render default 1`] = `
.emotion-1 {
  position: relative;
  display: block;
}

.emotion-0 {
  font-size: inherit;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in bright color 1`] = `
.emotion-0 {
  font-size: inherit;
}

.emotion-1 {
  position: relative;
  display: block;
  color: #fff;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in dark color 1`] = `
.emotion-0 {
  font-size: inherit;
}

.emotion-1 {
  position: relative;
  display: block;
  color: #000;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in size l 1`] = `
.emotion-1 {
  position: relative;
  display: block;
  width: 24px;
  height: 24px;
}

.emotion-0 {
  font-size: 24px;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in size m 1`] = `
.emotion-1 {
  position: relative;
  display: block;
  width: 18px;
  height: 18px;
}

.emotion-0 {
  font-size: 18px;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in size s 1`] = `
.emotion-1 {
  position: relative;
  display: block;
  width: 14px;
  height: 14px;
}

.emotion-0 {
  font-size: 14px;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with alignment center-in-content 1`] = `
.emotion-0 {
  font-size: inherit;
}

.emotion-1 {
  position: relative;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1::before {
  content: ' ';
  display: block;
  padding-top: 100%;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with animation rotation-clockwise 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-1 {
  position: relative;
  display: block;
}

.emotion-0 {
  font-size: inherit;
  -webkit-animation: animation-0 1.5s infinite linear;
  animation: animation-0 1.5s infinite linear;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with animation rotation-counter-clockwise 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }

  to {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
}

.emotion-1 {
  position: relative;
  display: block;
}

.emotion-0 {
  font-size: inherit;
  -webkit-animation: animation-0 1.5s infinite linear;
  animation: animation-0 1.5s infinite linear;
}

<span
  class=" emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with className 1`] = `
.emotion-1 {
  position: relative;
  display: block;
}

.emotion-0 {
  font-size: inherit;
}

<span
  class="test emotion-1"
>
  <i
    class="material-icons emotion-0"
  >
    favorite
  </i>
</span>
`;
